--- a/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
@@ -26,7 +26,7 @@
 			var authRequest, addressConsentToken;
 
 			OffAmazonPayments.Button('@Html.Raw(Model.WidgetId)', '@Html.Raw(Model.SellerId)', {
-				type: '@(Model.ButtonType ?? (Model.Type == AmazonPayRequestType.LoginPage ? "Login" : "PwA"))',
+				type: '@(Model.ButtonType ?? (Model.Type == AmazonPayRequestType.Authentication ? "Login" : "PwA"))',
 				color: '@(Model.ButtonColor ?? "Gold")',
 				size:  '@(Model.ButtonSize ?? "small")',
 				language: '@(Model.LanguageCode ?? "de-DE")',
