AmazonPay: Replaced branding image

--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
@@ -16,7 +16,7 @@
 	</div>
 	<div>
 		<a href="https://sellercentral-europe.amazon.com" target="_blank">
-			<img src="@Url.Content("~/Plugins/SmartStore.AmazonPay/Content/images/logo.gif")" alt="amazon payments" class="config-logo" />
+			<img src="@Url.Content("~/Plugins/SmartStore.AmazonPay/Content/branding.png")" alt="amazon payments" class="config-logo" />
 		</a>
 	</div>
 </div>
