--- a/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
@@ -45,7 +45,7 @@
 					if (referenceId) {
 						window.location = '@Model.LoginHandlerUrl' +
 							'?orderReferenceId=' + encodeURIComponent(referenceId) +
-							'&accessToken=' + encodeURIComponent(addressConsentToken);
+							'&addressConsentToken=' + encodeURIComponent(addressConsentToken);
 					}
 					else {
 						alert('@T("Plugins.Payments.AmazonPay.MissingOrderReferenceId")');
@@ -61,28 +61,6 @@
 			alert(e);
 		}
 	};
-
-	@*$(document).ready(function () {
-		try {
-
-			new OffAmazonPayments.Widgets.Button({
-				sellerId: '@Model.SellerId',
-				useAmazonAddressBook: @Model.IsShippable.ToString().ToLower(),
-				onSignIn: function (orderReference) {
-					var amazonOrderReferenceId = orderReference.getAmazonOrderReferenceId();
-
-					window.location = '@Model.LoginHandlerUrl' + '?orderReferenceId=' + encodeURIComponent(amazonOrderReferenceId);
-				},
-				onError: function (error) {
-					alert(error.getErrorCode() + ': ' + error.getErrorMessage());
-				}
-			}).bind('@Model.WidgetId');
-
-		}
-		catch (e) {
-			if (e.description) alert(e.description);
-		}
-	});*@
 </script>
 
 <script async="async" src="@Html.Raw(Model.WidgetUrl)"></script>
