--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Partials/CommonFacet.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Partials/CommonFacet.cshtml
@@ -26,14 +26,28 @@
 		</tr>
 	</table>
 }
-else if (Model.Locales.Count <= 1)
-{
-	@*Avoid providing an empty tab*@
-	<div class="alert alert-info">
-		@T("Admin.Configuration.Settings.NoMoreSettingsAvailable")
-	</div>
-}
 
+@if (Model.Locales.Count == 1)
+{
+	<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.Locales[0].Alias)
+			</td>
+			<td class="adminData">
+				@Html.EditorFor(model => Model.Locales[0].Alias)
+				@Html.ValidationMessageFor(model => model.Locales[0].Alias)
+			</td>
+		</tr>
+		<tr>
+			<td colspan="2">
+				@Html.HiddenFor(model => model.Locales[0].LanguageId)
+			</td>
+		</tr>
+	</table>
+}
+else
+{
 @(Html.LocalizedEditor<CommonFacetSettingsModel, CommonFacetSettingsLocalizedModel>(fieldPrefix + "-localized",
 	@<table class="adminContent">
 		<tr>
@@ -51,3 +65,4 @@ else if (Model.Locales.Count <= 1)
 			</td>
 		</tr>
 	</table>, null))
+}
