--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Picture.cshtml
@@ -48,14 +48,13 @@
 						var picture = Model.PictureModels[i];
 						<div class="gal-item">
 							<a class="gal-item-viewport" href="@picture.FullSizeImageUrl" data-thumg-image="@picture.ThumbImageUrl" data-medium-image="@picture.ImageUrl" title="@Model.Name" data-picture-id="@picture.PictureId">
-								@if (i == Model.GalleryStartIndex)
-								{
-									<img class="gal-item-content" src="@picture.ImageUrl" data-zoom="@picture.FullSizeImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
-								}
-								else
-								{
-									<img class="gal-item-content" data-lazy="@picture.ImageUrl" data-zoom="@picture.FullSizeImageUrl" alt="@picture.AlternateText" title="@picture.Title" />
-								}
+								<img class="gal-item-content"
+									 @Html.Attr(i == Model.GalleryStartIndex ? "src" : "data-lazy", picture.ImageUrl)
+									 data-zoom="@picture.FullSizeImageUrl"
+									 data-zoom-width="@picture.FullSizeImageWidth"
+									 data-zoom-height="@picture.FullSizeImageHeight"
+									 alt="@picture.AlternateText"
+									 title="@picture.Title" />
 							</a>
 						</div>
 					}
