Added the widget zone productdetails_pictures_bottom

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
@@ -92,6 +92,7 @@
 					  'productdetails_top',
 					  'productdetails_bottom',
                       'productdetails_pictures_top',
+                      'productdetails_pictures_bottom',
                       'productdetails_info_top',
                       'productdetails_info_bottom',
                       'productdetails_attrs_top',
