--- a/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
@@ -26,7 +26,7 @@
 			var authRequest, addressConsentToken;
 
 			OffAmazonPayments.Button('@Html.Raw(Model.WidgetId)', '@Html.Raw(Model.SellerId)', {
-				type: '@(Model.ButtonType ?? (Model.Type == AmazonPayRequestType.Authentication ? "Login" : "PwA"))',
+				type: '@(Model.ButtonType ?? (Model.Type == AmazonPayRequestType.AuthenticationPublicInfo ? "Login" : "PwA"))',
 				color: '@(Model.ButtonColor ?? "Gold")',
 				size:  '@(Model.ButtonSize ?? "small")',
 				language: '@(Model.LanguageCode ?? "de-DE")',
@@ -41,14 +41,21 @@
 					);
 				},
 				onSignIn: function (orderReference) {
-					var referenceId = orderReference.getAmazonOrderReferenceId();
-					if (referenceId) {
-						window.location = '@Model.LoginHandlerUrl' +
-							'?orderReferenceId=' + encodeURIComponent(referenceId) +
-							'&addressConsentToken=' + encodeURIComponent(addressConsentToken);
+					var isAuthButton = @((Model.Type == AmazonPayRequestType.AuthenticationPublicInfo).ToString().ToLower());
+					var handlerUrl = '@string.Concat(Model.ButtonHandlerUrl, Model.ButtonHandlerUrl.Contains('?') ? "&" : "?", "addressConsentToken=")';
+					handlerUrl += encodeURIComponent(addressConsentToken);
+
+					if (isAuthButton) {
+						window.location = handlerUrl;
 					}
 					else {
-						alert('@T("Plugins.Payments.AmazonPay.MissingOrderReferenceId")');
+						var referenceId = orderReference.getAmazonOrderReferenceId();
+						if (referenceId) {
+							window.location = handlerUrl + '&orderReferenceId=' + encodeURIComponent(referenceId);
+						}
+						else {
+							alert('@T("Plugins.Payments.AmazonPay.MissingOrderReferenceId")');
+						}
 					}
 				},
 				onError: function (error) {
