--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/OrderSummary.cshtml
@@ -108,13 +108,6 @@
 								if (Model.IsEditable)
 								{
 									Html.RenderPartial("_CheckoutAttributes", Model.CheckoutAttributes, new ViewDataDictionary());
-
-									if (Model.MinOrderSubtotalWarning.HasValue())
-									{
-										<div class="alert alert-warning">
-											@Model.MinOrderSubtotalWarning
-										</div>
-									}
 								}
 								Html.RenderWidget("order_summary_totals_before");
 
@@ -141,8 +134,7 @@
 						</button>
 					</div>
 					<div class="col-sm-6 col-lg-4 ml-lg-auto">
-						@if (String.IsNullOrEmpty(Model.MinOrderSubtotalWarning))
-						{
+						<div id="start-checkout-buttons" class="@(Model.IsValidMinOrderSubtotal ? "" : "d-none")">
 							<div class="checkout-buttons">
 								<input type="submit" name="startcheckout" value="startcheckout" id="startcheckout" class="d-none" />
 								<button type="button" id="checkout" name="checkout"
@@ -153,25 +145,23 @@
 								</button>
 							</div>
 
-                            if (Model.ButtonPaymentMethods.Items.Any())
-                            {
+							@if (Model.ButtonPaymentMethods.Items.Any())
+							{
+								<div class="addon-buttons">
+									<div class="d-flex justify-content-sm-end justify-content-center flex-wrap">
+										<div class="mt-3 mb-1 d-block col-12 text-center text-sm-right">
+											<span>@T("ShoppingCart.AlternativePaymentButtons")</span>
+										</div>
 
-
-                                <div class="addon-buttons">
-                                    <div class="d-flex justify-content-sm-end justify-content-center flex-wrap">
-                                        <div class="mt-3 mb-1 d-block col-12 text-center text-sm-right">
-                                            <span>@T("ShoppingCart.AlternativePaymentButtons")</span>
-                                        </div>
-
-                                        @*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express, Pay with Amazon)*@
-                                        @foreach (var item in Model.ButtonPaymentMethods.Items)
-                                        {
-                                            Html.RenderAction(item.ActionName, item.ControllerName, item.RouteValues);
-                                        }
-                                    </div>
-                                </div>
-                            }
-                        }
+										@*Payment method buttons (e.g. GoogleCheckoutButton, Paypal Express, Pay with Amazon)*@
+										@foreach (var item in Model.ButtonPaymentMethods.Items)
+										{
+											Html.RenderAction(item.ActionName, item.ControllerName, item.RouteValues);
+										}
+									</div>
+								</div>
+							}
+						</div>
 					</div>
 				</div>
 
@@ -269,6 +259,8 @@
 
                     var cartBody = $(".cart-body");
                     var totals = $("#order-totals");
+
+                    $("#start-checkout-buttons").toggleClass("d-none", !response.showCheckoutButtons);
 
                     if (response.success) {
                         // replace html
