Icon of delivery time status was cropped slightly on right

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_product.scss
@@ -417,6 +417,7 @@ $pd-offer-muted-color:          mix($body-color, $pd-offer-bg, 40%);
     .delivery-time-status {
         padding-right: 0.2rem;
         font-size: 0.85em;
+        margin-left: 0.025rem;
     }
 }
 
