Fixes #1156: Widget zone dropdown in backend does not filter entries by search term

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
@@ -15,7 +15,7 @@
 
 <script>
     $(function () {
-        var zoneChooser = $("#@id"),
+    	var zoneChooser = $("#@id"),
             zones;
 
         if (zoneChooser.data("available-zones")) {
@@ -258,8 +258,16 @@
         	});
         }
 
-        zoneChooser.select2({
-            tags: zones
+    	zoneChooser.select2({
+			multiple: true,
+			data: zones,
+			initSelection: function (el, fn) {
+				var data = [];
+				$(el.val().split(",")).each(function () {
+					data.push({ id: this, text: this });
+				});
+				fn(data);
+			}
         });
     });
 </script>
