More Telerik grid fixes

--- a/src/Presentation/SmartStore.Web/Administration/Views/Forum/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Forum/List.cshtml
@@ -18,7 +18,7 @@
 <table class="adminContent">
     <tr>
         <td>
-            @{Html.Telerik().Grid(Model)
+            @{Html.Telerik().Grid<ForumGroupModel>(Model)
                 .Name("forumgroup-grid")
                 .ToolBar(commands =>
                 {
